--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
 
-    <title>Document</title>
+    <title>Quiz
+    </title>
 </head>
 <body>
+    <div class="container">
+        <div id="question-container" class="hide">
+            <div id="question">Questions</div>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+        </div>
+        
+        <div class="controls">
+            <button id="start-btn" class="start-btn btn">Start</button>
+            <button id="next-btn" class="next-btn btn hide">Next</button>
+        </div>
+    </div>
 
     <script src="assets/css/js/script.js"></script>
     
