Updated css style

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
 
-
     <title>Quiz
     </title>
 </head>
 <body>
+
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Questions</div>
@@ -28,7 +28,15 @@
         </div>
     </div>
 
+    <br>
+
+    <div class="score-count">
+        <h2>Score:<label id="lblScore">0</label>
+        </h2>
+    </div>
+
     <script src="assets/css/js/script.js"></script>
     
 </body>
+
 </html>
