--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
             <button id="start-btn" class="start-btn btn">Start</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
+
+        <div id="score-tracking">
+            <p class="score">Score: <span id="correct">0</span></p>
+        </div>
     </div>
 
     <br>
 
-    <div class="score-count">
-        <h2>Score:<label id="lblScore">0</label>
-        </h2>
-    </div>
+
 
     <script src="assets/css/js/script.js"></script>
     
