--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="quiz, game, sports quiz">
+    <meta name="description" content="Quiz game about sports for anyone looking for challenge their sports knowledge">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Quiz
-    </title>
+    <link href="/favicon (1).ico" rel="icon" type="image/x-icon" />
+
+    <title>Sports Quiz</title>
 </head>
 <body>
 
@@ -32,12 +35,12 @@
         </div>
     </div>
 
-    <br>
-
-
 
     <script src="assets/css/js/script.js"></script>
     
 </body>
+<footer>
+
+</footer>
 
 </html>
