cleaned up page and added font awesome

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="quiz, game, sports quiz">
     <meta name="description" content="Quiz game about sports for anyone looking for challenge their sports knowledge">
+    
+    <!-- Link to stylesheet and favicon-->
     <link rel="stylesheet" href="assets/css/style.css">
-
     <link href="/favicon (1).ico" rel="icon" type="image/x-icon" />
 
     <title>Sports Quiz</title>
 </head>
 <body>
+<h1>Sports Quiz <i class="fas fa-basketball-ball"></i></h1>
 
+<section></section>
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Questions</div>
@@ -33,14 +36,21 @@
         <div id="score-tracking">
             <p class="score">Score: <span id="correct">0</span></p>
         </div>
+
     </div>
-
-
-    <script src="assets/css/js/script.js"></script>
+</section>
     
-</body>
+<!-- Footer -->
 <footer>
+
+<h2> Football<i class="far fa-futbol"></i> Basketball<i class="far fa-futbol"></i></h2>
 
 </footer>
 
+<!-- Font Awsome Link-->
+<script src="https://kit.fontawesome.com/d756a65642.js" crossorigin="anonymous"></script>
+<!-- Link to JavaScript -->
+<script src="assets/css/js/script.js"></script>
+
+</body>
 </html>
