--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="quiz, game, sports quiz">
     <meta name="description" content="Quiz game about sports for anyone looking for challenge their sports knowledge">
-    
+
     <!-- Link to stylesheet and favicon-->
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="/favicon (1).ico" rel="icon" type="image/x-icon" />
@@ -16,7 +16,7 @@
 <body>
 <h1>Sports Quiz <i class="fas fa-basketball-ball"></i></h1>
 
-<section></section>
+
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Questions</div>
@@ -36,19 +36,40 @@
         <div id="score-tracking">
             <p class="score">Score: <span id="correct">0</span></p>
         </div>
-
     </div>
-</section>
+
     
 <!-- Footer -->
 <footer>
+    <ul class="sports-link">
+        <li> Fb
+            <a href="https://www.youtube.com/watch?v=4RReihgFMDw" target="_blank" rel="noopener" aria-label="Check out Goals Worth Watching Again | Best Premier League Goals Of 2020/21 (opens in a new tab)"> <i class="far fa-futbol"></i></a>
+        </li>
+        <li> Bb
+            <a href="https://www.youtube.com/watch?v=CXLM08fZO5o" target="_blank" rel="noopener" aria-label="Check out NBA Epic Moments (opens in a new tab)"><i class="fas fa-basketball-ball"></i></a>
+        </li>
+        <li> Gf
+            <a href="https://www.youtube.com/watch?v=dpj-gKuV7Fc" target="_blank" rel="noopener" aria-label="Check out The best shots from the 2020-21 PGA TOUR season (opens in a new tab)"><i class="fas fa-golf-ball"></i></a>
+        </li>
+        <li> Tt
+            <a href="https://www.youtube.com/watch?v=RaN67O77hDY" target="_blank" rel="noopener" aria-label="Best Table Tennis Shots of 2019 (opens in a new tab)"><i class="fas fa-table-tennis"></i></a>
+        </li>
+        <li> Ih
+            <a href="https://www.youtube.com/watch?v=rN7OTecG-Ds" target="_blank" rel="noopener" aria-label="Filthiest Goals of the 2021 NHL Season (opens in a new tab)"><i class="fas fa-hockey-puck"></i></a>
+        </li>
+        <li> Af
+            <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" target="_blank" rel="noopener" aria-label="Top Catches of the 2021 Regular Season | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
+        </li>
+    </ul>
 
-<h2> Football<i class="far fa-futbol"></i> Basketball<i class="far fa-futbol"></i></h2>
+ 
 
 </footer>
 
 <!-- Font Awsome Link-->
 <script src="https://kit.fontawesome.com/d756a65642.js" crossorigin="anonymous"></script>
+
+
 <!-- Link to JavaScript -->
 <script src="assets/css/js/script.js"></script>
 
