Added more questions and cleaned up pages

--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <meta name="keywords" content="quiz, game, sports quiz">
     <meta name="description" content="Quiz game about sports for anyone looking for challenge their sports knowledge">
 
-    <!-- Link to stylesheet and favicon-->
+    <!-- Link to stylesheet and favicon icon -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="/favicon (1).ico" rel="icon" type="image/x-icon" />
 
     <title>Sports Quiz</title>
 </head>
 <body>
-<h1>Sports Quiz <i class="fas fa-basketball-ball"></i></h1>
+    <!-- Sports Quiz game  -->
+<h1>Sports Quiz
+    <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
 
+<!-- Game layout in container -->
 
     <div class="container">
         <div id="question-container" class="hide">
@@ -37,33 +40,29 @@
             <p class="score">Score: <span id="correct">0</span></p>
         </div>
     </div>
-
-    
-<!-- Footer -->
+ 
+<!-- Footer & Sports viedo links  -->
 <footer>
     <ul class="sports-link">
-        <li> Fb
+        <li> .
             <a href="https://www.youtube.com/watch?v=4RReihgFMDw" target="_blank" rel="noopener" aria-label="Check out Goals Worth Watching Again | Best Premier League Goals Of 2020/21 (opens in a new tab)"> <i class="far fa-futbol"></i></a>
         </li>
-        <li> Bb
+        <li> .
             <a href="https://www.youtube.com/watch?v=CXLM08fZO5o" target="_blank" rel="noopener" aria-label="Check out NBA Epic Moments (opens in a new tab)"><i class="fas fa-basketball-ball"></i></a>
         </li>
-        <li> Gf
+        <li> .
             <a href="https://www.youtube.com/watch?v=dpj-gKuV7Fc" target="_blank" rel="noopener" aria-label="Check out The best shots from the 2020-21 PGA TOUR season (opens in a new tab)"><i class="fas fa-golf-ball"></i></a>
         </li>
-        <li> Tt
+        <li> .
             <a href="https://www.youtube.com/watch?v=RaN67O77hDY" target="_blank" rel="noopener" aria-label="Best Table Tennis Shots of 2019 (opens in a new tab)"><i class="fas fa-table-tennis"></i></a>
         </li>
-        <li> Ih
+        <li> .
             <a href="https://www.youtube.com/watch?v=rN7OTecG-Ds" target="_blank" rel="noopener" aria-label="Filthiest Goals of the 2021 NHL Season (opens in a new tab)"><i class="fas fa-hockey-puck"></i></a>
         </li>
-        <li> Af
+        <li> .
             <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" target="_blank" rel="noopener" aria-label="Top Catches of the 2021 Regular Season | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
         </li>
     </ul>
-
- 
-
 </footer>
 
 <!-- Font Awsome Link-->
