Added an instructions page with a link back to the game

--- a/instructions.html
+++ b/instructions.html
@@ -11,43 +11,28 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="/favicon (1).ico" rel="icon" type="image/x-icon" />
 
-    <title>Sports Quiz</title>
+    <title>Game Instructions</title>
 </head>
 <body>
-    <header>
-        
-    <a href="instructions.html" aria-label="Takes you to the landingpage of the website and reloads it">
+    <header>    
+    <a href="index.html" aria-label="Takes you to the landingpage of the website and reloads it">
         <i class="fas fa-cogs"></i>
     </a>
     </header>
 
+    <h1>Sports Quiz
+        <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
 
-    <!-- Sports Quiz game  -->
-<h1>Sports Quiz
-    <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
-
-<!-- Game layout in container -->
-
-    <div class="container">
-        <div id="question-container" class="hide">
-            <div id="question">Questions</div>
-            <div id="answer-buttons" class="btn-grid">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+    <!-- Game Introduction -->
+    <section class="intro-game flex">
+        <div class="game-rules">
+            <h2>A quiz about everything in Sports</h2>
+            <p>The quiz contains 20 questions.<br> You will get the option to choose between 4 alternatives to the question asked.<br> When you have chosen your answer, click on "Answer" to get the result.
+            <br> If the answer is Correct, the page & answer will go "GREEN", same goes if you answer incorrectly.
+            <br> You get 2 points for each questions answered. A totoal score of 40 points to complete game.<br> To play game "AGAIN", refresh browers.</p>
             </div>
-        </div>
-        
-        <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="next-btn btn hide">Next</button>
-        </div>
+        </section>
 
-        <div id="score-tracking">
-            <p class="score">Score: <span id="correct">0</span></p>
-        </div>
-    </div>
  
 <!-- Footer & Sports viedo links  -->
 <footer>
