Addded more questions to the game

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <title>Sports Quiz</title>
 </head>
 <body>
-    <header>
-        
-    <a href="instructions.html" aria-label="Takes you to the landingpage of the website and reloads it">
+
+    <!-- Instructions to sports quiz game  -->  
+    <a href="instructions.html" aria-label="Takes you to the Game instruction page">
         <i class="fas fa-cogs"></i>
     </a>
-    </header>
 
 
     <!-- Sports Quiz game  -->
