--- a/instructions.html
+++ b/instructions.html
@@ -14,22 +14,22 @@
     <title>Game Instructions</title>
 </head>
 <body>
-    <header>    
-    <a href="index.html" aria-label="Takes you to the landingpage of the website and reloads it">
+     <!-- Link back to sports quiz game  -->    
+    <a href="index.html" aria-label="Takes you to the landingpage of the website">
         <i class="fas fa-cogs"></i>
     </a>
-    </header>
 
     <h1>Sports Quiz
         <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
 
-    <!-- Game Introduction -->
+    <!-- Game Instructions -->
     <section class="intro-game flex">
         <div class="game-rules">
             <h2>A quiz about everything in Sports</h2>
             <p>The quiz contains 20 questions.<br> You will get the option to choose between 4 alternatives to the question asked.<br> When you have chosen your answer, click on "Answer" to get the result.
-            <br> If the answer is Correct, the page & answer will go "GREEN", same goes if you answer incorrectly.
-            <br> You get 2 points for each questions answered. A totoal score of 40 points to complete game.<br> To play game "AGAIN", refresh browers.</p>
+            <br> If the answer is Correct / Incorrect the page & answer will go "GREEN" / "RED".
+            <br> You get 2 points for each questions answered. A totoal score of 40 points to complete game.<br> To get back to the Sports quiz click on the "COGS".<br> To play game "AGAIN", refresh browers.
+        </p>
             </div>
         </section>
 
