--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Link to stylesheet and favicon icon -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="/favicon (1).ico" rel="icon" type="image/x-icon" />
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <title>Sports Quiz</title>
 </head>
