Added to the ReadME and cleaned up pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="https://www.youtube.com/watch?v=rN7OTecG-Ds" target="_blank" rel="noopener" aria-label="Filthiest Goals of the 2021 NHL Season (opens in a new tab)"><i class="fas fa-hockey-puck"></i></a>
         </li>
         <li> .
-            <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" target="_blank" rel="noopener" aria-label="Top Catches of the 2021 Regular Season | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
+            <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" target="_blank" rel="noopener" aria-label=" | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
         </li>
     </ul>
 </footer>
