Updated instruction page and moved it

--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
     <title>Sports Quiz</title>
 </head>
 <body>
-
-    <!-- Instructions to sports quiz game  -->  
-    <a href="instructions.html" aria-label="Takes you to the Game instruction page">
-        <i class="fas fa-cogs"></i>
-    </a>
-
-
+    
     <!-- Sports Quiz game  -->
 <h1>Sports Quiz
     <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
@@ -37,14 +31,24 @@
                 <button class="btn">Answer 4</button>
             </div>
         </div>
-        
+        <!-- Game Controls  -->   
         <div class="controls">
             <button id="start-btn" class="start-btn btn">Start</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
 
+         <!-- Score Counter  -->   
         <div id="score-tracking">
             <p class="score">Score: <span id="correct">0</span></p>
+        </div>
+
+         <!-- Instructions to sports quiz game  -->  
+        <div>
+            <a href="instructions.html" aria-label="Takes you to the Game instruction page">
+                <h4>How to Play
+                <i class="fas fa-cogs"></i>
+                </h4>
+            </a>
         </div>
     </div>
  
