--- a/instructions.html
+++ b/instructions.html
@@ -14,11 +14,7 @@
     <title>Game Instructions</title>
 </head>
 <body>
-     <!-- Link back to sports quiz game  -->    
-    <a href="index.html" aria-label="Takes you to the landingpage of the website">
-        <i class="fas fa-cogs"></i>
-    </a>
-
+     
     <h1>Sports Quiz
         <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
 
@@ -28,9 +24,17 @@
             <h2>A quiz about everything in Sports</h2>
             <p>The quiz contains 20 questions.<br> You will get the option to choose between 4 alternatives to the question asked.<br> When you have chosen your answer, click on "Answer" to get the result.
             <br> If the answer is Correct / Incorrect the page & answer will go "GREEN" / "RED".
-            <br> You get 2 points for each questions answered. A totoal score of 40 points to complete game.<br> To get back to the Sports quiz click on the "COGS".<br> To play game "AGAIN", refresh browers.
+            <br> You get 2 points for each questions answered. A totoal score of 40 points to complete game.<br> To get back to the Sports quiz click on the "ARROW".<br> To play game "AGAIN", refresh browers.
         </p>
             </div>
+
+            <!-- Link back to sports quiz game  --> 
+            <h5> Back To Game  
+                <a href="index.html" aria-label="Takes you to the landingpage of the website">
+                    <i class="far fa-arrow-alt-circle-right"></i>
+                </a>
+            </h5> 
+            
         </section>
 
  
