Updated ReadMe file

--- a/instructions.html
+++ b/instructions.html
@@ -14,7 +14,7 @@
     <title>Game Instructions</title>
 </head>
 <body>
-     
+     <!-- Heading & link -->
     <h1>Sports Quiz
         <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
 
