--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     
     <!-- Sports Quiz game  -->
 <h1>Sports Quiz
-    <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
+    <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)">
+        <i class="fas fa-bomb"></i>
+    </a>
+</h1>
 
 <!-- Game layout in container -->
 
@@ -55,23 +58,23 @@
 <!-- Footer & Sports viedo links  -->
 <footer>
     <ul class="sports-link">
-        <li> .
+        <li> 
             <a href="https://www.youtube.com/watch?v=4RReihgFMDw" target="_blank" rel="noopener" aria-label="Check out Goals Worth Watching Again | Best Premier League Goals Of 2020/21 (opens in a new tab)"> <i class="far fa-futbol"></i></a>
         </li>
-        <li> .
-            <a href="https://www.youtube.com/watch?v=CXLM08fZO5o" target="_blank" rel="noopener" aria-label="Check out NBA Epic Moments (opens in a new tab)"><i class="fas fa-basketball-ball"></i></a>
+        <li> 
+            <a href="https://www.youtube.com/watch?v=CXLM08fZO5o" class="basketball" target="_blank" rel="noopener" aria-label="Check out NBA Epic Moments (opens in a new tab)"><i class="fas fa-basketball-ball"></i></a>
         </li>
-        <li> .
-            <a href="https://www.youtube.com/watch?v=dpj-gKuV7Fc" target="_blank" rel="noopener" aria-label="Check out The best shots from the 2020-21 PGA TOUR season (opens in a new tab)"><i class="fas fa-golf-ball"></i></a>
+        <li> 
+            <a href="https://www.youtube.com/watch?v=dpj-gKuV7Fc" class="golf" target="_blank" rel="noopener" aria-label="Check out The best shots from the 2020-21 PGA TOUR season (opens in a new tab)"><i class="fas fa-golf-ball"></i></a>
         </li>
-        <li> .
-            <a href="https://www.youtube.com/watch?v=RaN67O77hDY" target="_blank" rel="noopener" aria-label="Best Table Tennis Shots of 2019 (opens in a new tab)"><i class="fas fa-table-tennis"></i></a>
+        <li> 
+            <a href="https://www.youtube.com/watch?v=RaN67O77hDY" class="Tabletennis" target="_blank" rel="noopener" aria-label="Best Table Tennis Shots of 2019 (opens in a new tab)"><i class="fas fa-table-tennis"></i></a>
         </li>
-        <li> .
+        <li> 
             <a href="https://www.youtube.com/watch?v=rN7OTecG-Ds" target="_blank" rel="noopener" aria-label="Filthiest Goals of the 2021 NHL Season (opens in a new tab)"><i class="fas fa-hockey-puck"></i></a>
         </li>
-        <li> .
-            <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" target="_blank" rel="noopener" aria-label=" | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
+        <li> 
+            <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" class="nfl" target="_blank" rel="noopener" aria-label=" | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
         </li>
     </ul>
 </footer>
