Updated ReadME file

--- a/instructions.html
+++ b/instructions.html
@@ -45,19 +45,19 @@
             <a href="https://www.youtube.com/watch?v=4RReihgFMDw" target="_blank" rel="noopener" aria-label="Check out Goals Worth Watching Again | Best Premier League Goals Of 2020/21 (opens in a new tab)"> <i class="far fa-futbol"></i></a>
         </li>
         <li> .
-            <a href="https://www.youtube.com/watch?v=CXLM08fZO5o" target="_blank" rel="noopener" aria-label="Check out NBA Epic Moments (opens in a new tab)"><i class="fas fa-basketball-ball"></i></a>
+            <a href="https://www.youtube.com/watch?v=CXLM08fZO5o" class="basketball" target="_blank" rel="noopener" aria-label="Check out NBA Epic Moments (opens in a new tab)"><i class="fas fa-basketball-ball"></i></a>
         </li>
         <li> .
-            <a href="https://www.youtube.com/watch?v=dpj-gKuV7Fc" target="_blank" rel="noopener" aria-label="Check out The best shots from the 2020-21 PGA TOUR season (opens in a new tab)"><i class="fas fa-golf-ball"></i></a>
+            <a href="https://www.youtube.com/watch?v=dpj-gKuV7Fc" class="golf" target="_blank" rel="noopener" aria-label="Check out The best shots from the 2020-21 PGA TOUR season (opens in a new tab)"><i class="fas fa-golf-ball"></i></a>
         </li>
         <li> .
-            <a href="https://www.youtube.com/watch?v=RaN67O77hDY" target="_blank" rel="noopener" aria-label="Best Table Tennis Shots of 2019 (opens in a new tab)"><i class="fas fa-table-tennis"></i></a>
+            <a href="https://www.youtube.com/watch?v=RaN67O77hDY" class="Tabletennis" target="_blank" rel="noopener" aria-label="Best Table Tennis Shots of 2019 (opens in a new tab)"><i class="fas fa-table-tennis"></i></a>
         </li>
         <li> .
             <a href="https://www.youtube.com/watch?v=rN7OTecG-Ds" target="_blank" rel="noopener" aria-label="Filthiest Goals of the 2021 NHL Season (opens in a new tab)"><i class="fas fa-hockey-puck"></i></a>
         </li>
         <li> .
-            <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" target="_blank" rel="noopener" aria-label="Top Catches of the 2021 Regular Season | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
+            <a href="https://www.youtube.com/watch?v=COSXtNrTQdI" class="nfl" target="_blank" rel="noopener" aria-label="Top Catches of the 2021 Regular Season | NFL Highlights (opens in a new tab)"><i class="fas fa-football-ball"></i></a>
         </li>
     </ul>
 </footer>
