Added a total score of 40

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
          <!-- Score Counter  -->   
         <div id="score-tracking">
-            <p class="score">Score: <span id="correct">0</span></p>
+            <p class="score">Score: 40 / <span id="correct">0</span></p>
         </div>
 
          <!-- Instructions to sports quiz game  -->  
