Added to instruction page

--- a/instructions.html
+++ b/instructions.html
@@ -24,7 +24,10 @@
             <h2>A quiz about everything in Sports</h2>
             <p>The quiz contains 20 questions.<br> You will get the option to choose between 4 alternatives to the question asked.<br> When you have chosen your answer, click on "Answer" to get the result.
             <br> If the answer is Correct / Incorrect the page & answer will go "GREEN" / "RED".
-            <br> You get 2 points for each questions answered. A totoal score of 40 points to complete game.<br> To get back to the Sports quiz click on the "ARROW".<br> To play game "AGAIN", refresh browers.
+            <br> You get 2 points for each questions answered. A totoal score of 40 points to complete game.
+            <br> Looking for some "HINTS" click on the Sports icons.
+            <br> To get back to the Sports quiz click on the "ARROW".
+            <br> To play game "AGAIN", refresh browers.
         </p>
             </div>
 
