--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     
     <!-- Sports Quiz game  -->
-<h1>Sports Quiz
+<h1> <a href="index.html" target="_blank" rel="noopener" aria-label="Link to Sports Quiz Home">Sports Quiz</a>
     <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)">
         <i class="fas fa-bomb"></i>
     </a>
