--- a/instructions.html
+++ b/instructions.html
@@ -15,8 +15,11 @@
 </head>
 <body>
      <!-- Heading & link -->
-    <h1>Sports Quiz
-        <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)"><i class="fas fa-bomb"></i></a></h1>
+     <h1> <a href="index.html" target="_blank" rel="noopener" aria-label="Link to Sports Quiz Home">Sports Quiz</a>
+        <a href="https://www.youtube.com/watch?v=sa2HN8AAqZI" target="_blank" rel="noopener" aria-label="Ireland's Greatest Sporting Moments | Ireland vs The World (opens in a new tab)">
+            <i class="fas fa-bomb"></i>
+        </a>
+    </h1>
 
     <!-- Game Instructions -->
     <section class="intro-game flex">
